# ohtu-palautukset

./: README.md
viikko1/nhl-statistics/: .coverage
viikko1/nhl-statistics/src/: index.py  statistics_service.py
viikko1/nhl-statistics/src/tests/: statistics_service_test.py
viikko1/riippuvuuksien-injektointi/src/tests/: laskin_test.py
viikko2/git-branch-harjoitus/: changelog.txt  index.py
viikko2/nhl-reader/: .pylintrc  pyproject.toml
viikko2/nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py
viikko2/poetry-web/: pyproject.toml
viikko3/: retro.md
viikko3/login/: log.html  output.xml  report.html
viikko3/login/src/services/: user_service.py
viikko3/login/src/tests/: login.robot  register.robot  resource.robot
viikko4/: test.md
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/verkkokauppa/: .coverage
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/: review.md  vibe.md
viikko5/tennis/src/: tennis_game.py
viikko6/laskin/src/: kayttoliittyma.py  komennot.py  sovelluslogiikka.py
viikko6/query-language/src/: index.py  matchers.py  query_builder.py
viikko7/: agent.md
viikko7/kivi-paperi-sakset/: TESTING.md  pyproject.toml
viikko7/kivi-paperi-sakset-original/src/: kps_parempi_tekoaly.py  kps_tekoaly.py
viikko7/kivi-paperi-sakset/src/: .coverage  index.py  luo_peli.py  web_app.py
viikko7/kivi-paperi-sakset/src/templates/: game.html  game_over.html  index.html  round_result.html
viikko7/kivi-paperi-sakset/src/tests/: test_web_app.py
