[project]
name = "nhl-reader"
version = "0.1.0"
description = ""
authors = [
    {name = "Matti Luukkainen",email = "mluukkai@iki.fi"}
]
license = {text = "MIT"}
requires-python = "^3.12"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"
rich = "^14.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pylint (>=4.0.2,<5.0.0)"
]
